feat: implement glassmorphism UI, tiingo data integration, and multi-tenant auth (Leaf Pattern compliant)

--- a/package.json
+++ b/package.json
@@ -6,20 +6,51 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "type-check": "tsc --noEmit",
+    "deploy": "git push && .husky/post-push",
+    "prepare": "husky",
+    "lint-staged": "lint-staged",
+    "env:push": "tsx ../platform/scripts/push-env.ts"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix --ignore-pattern 'e2e/**'",
+      "prettier --write"
+    ],
+    "*.{json,css,md}": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
+    "@jl0810/auth": "^0.0.12",
+    "@jl0810/db-client": "^1.3.2",
+    "@paralleldrive/cuid2": "^3.0.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "better-auth": "^1.4.17",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.45.1",
+    "framer-motion": "^12.28.1",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.562.0",
     "next": "16.1.4",
+    "postgres": "^3.4.8",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/lodash": "^4.17.23",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.8.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
