--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@jl0810/auth": "^0.0.12",
     "@jl0810/db-client": "^1.3.2",
+    "@jl0810/messaging": "^1.2.2",
     "@paralleldrive/cuid2": "^3.0.6",
     "@radix-ui/react-slot": "^1.2.4",
     "better-auth": "^1.4.17",
