--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@jl0810/db-client": "^1.3.2",
     "@jl0810/messaging": "^1.2.2",
     "@paralleldrive/cuid2": "^3.0.6",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
     "better-auth": "^1.4.17",
     "class-variance-authority": "^0.7.1",
@@ -51,6 +53,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.31.8",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
     "husky": "^9.1.7",
@@ -61,6 +65,7 @@
     "tailwindcss": "^4",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
