--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "deploy": "git push && .husky/post-push",
     "prepare": "husky",
     "lint-staged": "lint-staged",
-    "env:push": "tsx ../platform/scripts/push-env.ts",
-    "script:update-prices": "tsx scripts/update-prices.ts"
+    "env:push": "tsx ../platform/scripts/push-env.ts"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -43,8 +42,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0",
-    "tsx": "^4.19.0"
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
