--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
+    "@react-email/components": "^1.0.6",
+    "@react-email/render": "^2.0.4",
     "better-auth": "^1.4.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -68,7 +70,11 @@
     "tailwindcss": "^4",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
-    "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "tw-animate-css": "^1.4.0"
+  },
+  "overrides": {
+    "@jl0810/messaging": {
+      "@react-email/components": "$@react-email/components"
+    }
   }
 }
