--- a/package.json
+++ b/package.json
@@ -73,8 +73,7 @@
     "tw-animate-css": "^1.4.0"
   },
   "overrides": {
-    "@jl0810/messaging": {
-      "@react-email/components": "$@react-email/components"
-    }
+    "@react-email/components": "$@react-email/components",
+    "@react-email/render": "$@react-email/render"
   }
 }
