--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "tw-animate-css": "^1.4.0"
   },
   "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom",
     "@react-email/components": "$@react-email/components",
     "@react-email/render": "$@react-email/render"
   }
