--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "@jl0810/auth": "^0.0.12",
     "@jl0810/db-client": "^1.3.2",
-    "@jl0810/messaging": "^1.2.2",
+    "@jl0810/messaging": "file:../platform/packages/messaging",
     "@paralleldrive/cuid2": "^3.0.6",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
