--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-dom": "19.2.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tsx": "^4.19.0"
+    "tsx": "^4.19.0",
+    "yahoo-finance2": "^3.11.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
