--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "sonner": "^2.0.7",
+    "swetrix": "^4.1.0",
     "tailwind-merge": "^3.4.0",
     "tsx": "^4.19.0",
     "yahoo-finance2": "^3.11.2"
