--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "swetrix": "^4.1.0",
     "tailwind-merge": "^3.4.0",
     "tsx": "^4.19.0",
+    "web-vitals": "^5.1.0",
     "yahoo-finance2": "^3.11.2"
   },
   "devDependencies": {
