--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "yahoo-finance2": "^3.11.2"
   },
   "devDependencies": {
+    "@jl0810/next-config": "^0.0.2",
     "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.1",
